--- a/budget/templates/budget/reports.html
+++ b/budget/templates/budget/reports.html
@@ -2,6 +2,23 @@
 
 {% block body %}
 
-<h1>Welcome to the REPORTS PAGE!</h1>
+<div class="col py-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="text-light">
+                <h1>Reports</h1>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-md-12">
+                <div class="card text-white bg-dark h-100 bg-opacity-25">
+                    <div class="card-body">
+                        <p class="text-center">info here</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
