--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -4,14 +4,22 @@
 <head>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="{% static 'budget/custom.css' %}">
     <title>Easy Budget</title>
 </head>
 <body>
-
-    <nav class="navbar navbar-dark bg-dark navbar-expand-md py-4">
+<style>
+    body {
+  background-color: #1a2f4b;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%231A2F4B'/%3E%3Cstop offset='1' stop-color='%2334495D'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+}
+</style>
+    {% comment %}<nav class="navbar navbar-dark bg-dark navbar-expand-md py-4">
         <div class="collapse navbar-collapse pr-4" id="navbarLinks">
             <ul class="navbar-nav">
                 <li class="nav-item px-3">
@@ -31,8 +39,106 @@
                 </li>
             </ul>
         </div>
-    </nav>
+    </nav>{% endcomment %}
 
+    <div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div
+            class="d-none d-sm-block d-sm-block d-sm-none d-md-block col-auto col-xl-2 px-sm-2 px-0 bg-dark bg-opacity-25">
+            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+                <div style="background-color: #2F8886" class="card text-white h-100 bg-opacity-25">
+                    <div class="card-body">
+                        <p class="card-text text-center">Info Here</p>
+                    </div>
+                </div>
+                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start pt-2 text-white"
+                    id="sidenav">
+                    <li class="nav-item">
+                        <a href="{% url 'dashboard' %}" class="nav-link active">
+                            <i class="bi bi-grid"></i><span class="ms-1 d-none d-sm-inline text-white">Dashboard</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'transactions' %}" class="nav-link">
+                            <i class="bi bi-credit-card-2-front text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Transactions</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'budget' %}" class="nav-link">
+                            <i class="bi bi-pie-chart text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Budgets</span>
+                        </a>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% comment %}{% url 'category-form' %}{% endcomment %}" class="nav-link">
+                            <i class="bi bi-diagram-2 text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Categories</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'reports' %}" class="nav-link">
+                            <i class="bi bi-graph-up-arrow text-white"></i> <span
+                                class="ms-1 d-none d-sm-inline text-white">Reports</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% comment %}{% url 'user-profile' %}{% endcomment %}" class="nav-link">
+                            <i class="bi bi-person text-white"></i><span class="ms-1 d-none d-sm-inline text-white">User
+                                Profile</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% comment %}{% url 'settings' %}{% endcomment %}" class="nav-link">
+                            <i class="bi bi-gear text-white"></i><span
+                                class="ms-1 d-none d-sm-inline text-white">Settings</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        {% block body %}
+    {% endblock %}
+    </div>
+</div>
+<div class="d-flex justify-content-center py-3 d-block d-sm-block d-md-none">
+    <ul class="nav fixed-bottom bg-dark bg-opacity-25 auto justify-content-center my-md-0 text-small">
+        <li>
+            <a href="{% url 'dashboard' %}" class="nav-link text-white text-center" style="
+            border-bottom: #ee7738 4px solid;
+        ">
+                <i class="bi bi-grid"></i><span class="text-white"><br>Dashboard</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'transactions' %}" class="nav-link text-white text-center">
+                <i class="bi bi-credit-card-2-front text-white"></i><span class="text-white"><br>Transactions</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'budget' %}" class="nav-link text-white text-center">
+                <i class="bi bi-pie-chart text-white"></i><span class="text-white"><br>Budgets</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% comment %}{% url 'category-form' %}{% endcomment %}" class="nav-link text-white text-center">
+                <i class="bi bi-diagram-2 text-white"></i><span class="text-white"><br>Categories</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% url 'reports' %}" class="nav-link text-white text-center">
+                <i class="bi bi-graph-up-arrow text-white"></i> <span class="text-white"><br>Reports</span>
+            </a>
+        </li>
+        <li>
+            <a href="{% comment %}{% url 'user-profile' %}{% endcomment %}" class="nav-link text-white text-center">
+                <i class="bi bi-person text-white"></i><span class="text-white"><br>User
+                    Profile</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
     {% if messages %}
         {% for message in messages %}
@@ -42,12 +148,12 @@
         {% endfor %}
     {% endif %}
 
-    {% block body %}
-    {% endblock %}
+    {% comment %}{% block body %}
+    {% endblock %}{% endcomment %}
 
-    <nav class="navbar navbar-dark bg-dark">
+    {% comment %}<nav class="navbar navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Footer</a>
-    </nav>
+    </nav>{% endcomment %}
 
 </body>
 </html>
