--- a/budget/templates/budget/budget.html
+++ b/budget/templates/budget/budget.html
@@ -1,21 +1,36 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
-
-<h1>Welcome to the BUDGET PAGE!</h1>
-<br>
-<h3>Categories:</h3>
-{% for category in categories_list %}
-    <ul>
-        <li>{{ category.name }}, {{ category.type }}</li>
-    </ul>
-{% endfor %}
-<br>
-<h3>Labels:</h3>
-{% for label in labels_list %}
-    <ul>
-        <li>{{ label.name }}, {{ label.category }}, {{ label.amount_planned }}, {{ label.amount_received }}, {{ label.due_date }}, {{ label.notes }}</li>
-    </ul>
-{% endfor %}}
+<div class="col py-3">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="text-light">
+                <h1>Budget</h1>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-md-12">
+                <div class="card text-white bg-dark h-100 bg-opacity-25">
+                    <div class="card-body">
+                        <h2>Categories:</h2>
+                        {% for category in categories_list %}
+                        <ul>
+                            <li>{{ category.name }}, {{ category.type }}</li>
+                        </ul>
+                        {% endfor %}
+                        <br>
+                        <h2>Labels:</h2>
+                        {% for label in labels_list %}
+                        <ul>
+                            <li>{{ label.name }}, {{ label.category }}, {{ label.amount_planned }},
+                                {{ label.amount_received }}, {{ label.due_date }}, {{ label.notes }}</li>
+                        </ul>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
