--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,4 +16,12 @@
             </div>
         </div>
    </div>
+   <!--logout option for profile page. Jami -->
+   <div>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+   </div>
 {% endblock %}
