--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -1,7 +1,23 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
+<div>
+    <li>
+        {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="nav-link">Login</a>
+        {% endif %}
+    </li>
+</div>
 
-<h1>Welcome to the HOMEPAGE!</h1>
+<div>
+    <h1>Welcome to the HOMEPAGE!</h1>
+</div>
+
 
 {% endblock %}
+
+
+
+
