--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -16,7 +16,7 @@
             </div>
         </div>
    </div>
-   <!--logout option for profile page. Jami -->
+   <!--logout option for profile page. Jami.  needs styling -->
    <div>
         {% if user.is_authenticated %}
         <a href="{% url 'logout' %}">Logout</a>
