profile image added

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,4 +24,6 @@
         <a href="{% url 'login' %}">Login</a>
         {% endif %}
    </div>
+   <!-- image for profile-->
+   <img src="{{ user.profile.image.url }}"
 {% endblock %}
