--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,7 @@
                         <button class="btn btn-secondary btn-green btn-custom-1 px-5" type="submit">Login</button>
                     </form>
                     <br>
-                    <h3 class="text-info">Don't have an account?</h3>
+                    <h3>Don't have an account?</h3>
                     <a href="{% url 'register' %}" class="btn btn-secondary btn-gray btn-custom-1 px-5">Create New Account</a>
                 </div>
             </div>
