--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -105,6 +105,17 @@
                                     class="ms-1 d-none d-sm-inline text-white">Settings</span>
                             </a>
                         </li>
+                        <li>
+                            {% if user.is_authenticated %}
+                            <a href="{% url 'logout' %}" class="nav-link"><i
+                                    class="bi bi-box-arrow-left text-white"></i><span
+                                    class="ms-1 d-none d-sm-inline text-white">Logout</span></a>
+                            {% else %}
+                            <a href="{% url 'login' %}" class="nav-link"><i
+                                    class="bi bi-box-arrow-in-right text-white"></i><span
+                                    class="ms-1 d-none d-sm-inline text-white">Login</span></a>
+                            {% endif %}
+                        </li>
                     </ul>
                 </div>
             </div>
