minor layout update

--- a/budget/static/budget/custom.css
+++ b/budget/static/budget/custom.css
@@ -85,3 +85,9 @@ ul {
   font-family: 'Sintony', sans-serif;
   color: white;
 }
+
+.profile-pic {
+  clip-path: circle(50%);
+  height: 8em;
+  width: 8em;
+}
