--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -93,7 +93,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% comment %}{% url 'user-profile' %}{% endcomment %}" class="nav-link">
+                            <a href="{% url 'profile' %}" class="nav-link">
                                 <i class="bi bi-person text-white"></i><span
                                     class="ms-1 d-none d-sm-inline text-white">User
                                     Profile</span>
