--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,7 +1,29 @@
 {% extends 'budget/base.html' %}
 
 {% block body %}
-    <div class="container-fluid hero-2">
+    <div class="col py-3">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="text-light">
+                    <h1>Welcome, {{ user.first_name }}!</h1>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <div class="card text-white bg-dark h-100 bg-opacity-25">
+                        <div class="card-body">
+                            <img class="profile-pic" src="{{ user.profile.image.url }}">
+                            <p>username: {{ user.username }}</p>
+                            <p>first name: {{ user.first_name }}</p>
+                            <p>last name: {{ user.last_name }}</p>
+                            <p>email: {{ user.email }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% comment %}<div class="container-fluid hero-2">
         <div class="container">
             <div class="row height-45 align-items-center">
                 <div class="ml-5 pl-4">
@@ -15,15 +37,13 @@
                 </div>
             </div>
         </div>
-   </div>
-   <!--logout option for profile page. Jami.  needs styling -->
-   <div>
+    </div>{% endcomment %}
+    <!--logout option for profile page. Jami.  needs styling -->
+    {% comment %}<div>
         {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
+            <a href="{% url 'logout' %}">Logout</a>
         {% else %}
-        <a href="{% url 'login' %}">Login</a>
+            <a href="{% url 'login' %}">Login</a>
         {% endif %}
-   </div>
-   <!-- image for profile-->
-   <img src="{{ user.profile.image.url }}"
+    </div>{% endcomment %}
 {% endblock %}
