--- a/budget/static/budget/custom.css
+++ b/budget/static/budget/custom.css
@@ -1,93 +1,104 @@
 .nav-pills .nav-link {
-  background: 0 0;
-  border: 0;
-  border-radius: 50rem;
+    background: 0 0;
+    border: 0;
+    border-radius: 50rem;
 }
 
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #2f8886;
+    color: #fff;
+    background-color: #2f8886;
 }
 
-.nav-dashboard {
-  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' clip-rule='evenodd' fill-rule='evenodd' fill='%23fff' stroke-linejoin='round' stroke-miterlimit='2' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m11.3 13.7c0-.53-.47-1-1-1h-7.3c-.53 0-1 .47-1 1v5.3c0 .53.47 1 1 1h7.3c.53 0 1-.47 1-1zm10.7 0c0-.53-.47-1-1-1h-7.3c-.53 0-1 .47-1 1v5.3c0 .53.47 1 1 1h7.3c.53 0 1-.47 1-1zm-7.8.5h6.3v4.3h-6.3zm-10.7 0h6.3v4.3h-6.3zm18.5-9.2c0-.53-.47-1-1-1h-7.3c-.53 0-1 .47-1 1v5.3c0 .53.47 1 1 1h7.3c.53 0 1-.47 1-1zm-10.7 0c0-.53-.47-1-1-1h-7.3c-.53 0-1 .47-1 1v5.3c0 .53.47 1 1 1h7.3c.53 0 1-.47 1-1zm2.9.5h6.3v4.3h-6.3zm-10.7 0h6.3v4.3h-6.3z' fill-rule='nonzero' /%3E%3C/svg%3E");
+.mobile-active {
+    border-bottom: #ee7738 4px solid;
+}
+
+.nav-tabs {
+    border-bottom: 0px;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: white;
+    background-color: transparent;
+    border-color: transparent;
+    border-bottom: #EE7738 4px solid;
 }
 
 .card {
-  border: none;
+    border: none;
 }
 
 .expense-one {
-  background: #f59d2a;
-  clip-path: circle(50%);
-  height: 3em;
-  width: 3em;
+    background: #f59d2a;
+    clip-path: circle(50%);
+    height: 3em;
+    width: 3em;
 }
 
 .expense-two {
-  background: #2f8886;
-  clip-path: circle(50%);
-  height: 3em;
-  width: 3em;
+    background: #2f8886;
+    clip-path: circle(50%);
+    height: 3em;
+    width: 3em;
 }
 
 .expense-three {
-  background: #a05195;
-  clip-path: circle(50%);
-  height: 3em;
-  width: 3em;
+    background: #a05195;
+    clip-path: circle(50%);
+    height: 3em;
+    width: 3em;
 }
 
 .expense-four {
-  background: #84c69b;
-  clip-path: circle(50%);
-  height: 3em;
-  width: 3em;
+    background: #84c69b;
+    clip-path: circle(50%);
+    height: 3em;
+    width: 3em;
 }
 
 .expense-five {
-  background: #ee7738;
-  clip-path: circle(50%);
-  height: 3em;
-  width: 3em;
+    background: #ee7738;
+    clip-path: circle(50%);
+    height: 3em;
+    width: 3em;
 }
 
 H1, H2, H3, H4, H5, H6 {
-  font-family: 'Roboto', sans-serif;
-  color: white;
+    font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 p {
-  font-family: 'Sintony', sans-serif;
-  color: white;
+    font-family: 'Sintony', sans-serif;
+    color: white;
 }
 
 label {
-  font-family: 'Sintony', sans-serif;
-  color: white;
+    font-family: 'Sintony', sans-serif;
+    color: white;
 }
 
 tbody, td, tfoot, th, thead, tr {
-  font-family: 'Sintony', sans-serif;
-  color: white;
-  border-bottom-color: #84c69b;
-  border-bottom-style: solid;
-  border-bottom-width: 2px;
+    font-family: 'Sintony', sans-serif;
+    color: white;
+    border-bottom-color: #84c69b;
+    border-bottom-style: solid;
+    border-bottom-width: 2px;
 }
 
 ul {
-  font-family: 'Sintony', sans-serif;
-  color: white;
+    font-family: 'Sintony', sans-serif;
+    color: white;
 }
 
 .helptext {
-  font-family: 'Sintony', sans-serif;
-  color: white;
+    font-family: 'Sintony', sans-serif;
+    color: white;
 }
 
 .profile-pic {
-  clip-path: circle(50%);
-  height: 8em;
-  width: 8em;
+    clip-path: circle(50%);
+    height: 8em;
+    width: 8em;
 }
