--- a/budget/templates/budget/reports.html
+++ b/budget/templates/budget/reports.html
@@ -2,23 +2,53 @@
 
 {% block body %}
 
-<div class="col py-3">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="text-light">
-                <h1>Reports</h1>
+    <div class="col py-3">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="text-light">
+                    <h1>Reports</h1>
+                </div>
             </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-md-12">
-                <div class="card text-white bg-dark h-100 bg-opacity-25">
-                    <div class="card-body">
-                        <p class="text-center">info here</p>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <div class="card text-white bg-dark h-100 bg-opacity-25">
+                        <div class="card-body">
+                            <ul class="nav nav-tabs nav-fill bg-light bg-opacity-25 rounded" id="reportsTab" role="tablist">
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link text-white active" id="home-tab" data-bs-toggle="tab"
+                                            data-bs-target="#overview-tab-pane" type="button" role="tab"
+                                            aria-controls="overview-tab-pane" aria-selected="true">Budget Overview
+                                    </button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link text-white" id="monthly-tab" data-bs-toggle="tab"
+                                            data-bs-target="#monthly-tab-pane" type="button" role="tab"
+                                            aria-controls="monthly-tab-pane" aria-selected="false">Monthly Spending
+                                    </button>
+                                </li>
+                                <li class="nav-item" role="presentation">
+                                    <button class="nav-link text-white" id="categories-tab" data-bs-toggle="tab"
+                                            data-bs-target="#categories-tab-pane" type="button" role="tab"
+                                            aria-controls="categories-tab-pane" aria-selected="false">Spending Categories
+                                    </button>
+                                </li>
+                            </ul>
+                            <div class="tab-content" id="reportsTabContent">
+                                <div class="tab-pane fade show active" id="overview-tab-pane" role="tabpanel"
+                                     aria-labelledby="overview-tab" tabindex="0">Budget Overview charts here
+                                </div>
+                                <div class="tab-pane fade" id="monthly-tab-pane" role="tabpanel"
+                                     aria-labelledby="monthly-tab" tabindex="0">Monthly Spending charts here
+                                </div>
+                                <div class="tab-pane fade" id="categories-tab-pane" role="tabpanel"
+                                     aria-labelledby="categories-tab" tabindex="0">Spending Categories charts here
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
