--- a/budget/templates/budget/transactions.html
+++ b/budget/templates/budget/transactions.html
@@ -9,7 +9,9 @@
             </div>
         </div>
         <div class="row mt-2">
-            <a class="btn btn-success" href="{% url 'create_transaction' %}" role="button">Add Transaction</a>
+        <div class="col-md-3 pb-2">
+            <a class="btn btn-success" href="{% url 'create_transaction' %}" role="button"><i class="bi bi-plus-circle text-white"></i> Add Transaction</a>
+        </div>
             <div class="col-md-12">
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
