--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -16,6 +16,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <link rel="stylesheet" href="{% static 'budget/custom.css' %}">
     <title>Easy Budget</title>
+    <link rel="icon" href="https://i.postimg.cc/GtHbQFyK/easy-budget-title-logo.png" type="image/icon type">
 </head>
 
 <body>
@@ -27,27 +28,6 @@
             background-size: cover;
         }
     </style>
-    {% comment %}<nav class="navbar navbar-dark bg-dark navbar-expand-md py-4">
-        <div class="collapse navbar-collapse pr-4" id="navbarLinks">
-            <ul class="navbar-nav">
-                <li class="nav-item px-3">
-                    <a href="{% url 'index' %}" class="nav-link text-uppercase">Homepage</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a href="{% url 'dashboard' %}" class="nav-link text-uppercase">Dashboard</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a href="{% url 'transactions' %}" class="nav-link text-uppercase">Transactions</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a href="{% url 'budget' %}" class="nav-link text-uppercase">budget</a>
-                </li>
-                <li class="nav-item px-3">
-                    <a href="{% url 'reports' %}" class="nav-link text-uppercase">reports</a>
-                </li>
-            </ul>
-        </div>
-    </nav>{% endcomment %}
 
     <div class="container-fluid">
         <div class="row flex-nowrap">
@@ -80,12 +60,6 @@
                             </a>
                         </li>
                         <li>
-                            <a {% if request.resolver_match.url_name == 'url' %}class="nav-link active"{% endif %} href="{% comment %}{% url 'category-form' %}{% endcomment %}" class="nav-link">
-                                <i class="bi bi-diagram-2 text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">Categories</span>
-                            </a>
-                        </li>
-                        <li>
                             <a {% if request.resolver_match.url_name == 'reports' %}class="nav-link active"{% endif %} href="{% url 'reports' %}" class="nav-link">
                                 <i class="bi bi-graph-up-arrow text-white"></i> <span
                                     class="ms-1 d-none d-sm-inline text-white">Reports</span>
@@ -96,12 +70,6 @@
                                 <i class="bi bi-person text-white"></i><span
                                     class="ms-1 d-none d-sm-inline text-white">User
                                     Profile</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a {% if request.resolver_match.url_name == 'url' %}class="nav-link active"{% endif %} href="{% comment %}{% url 'settings' %}{% endcomment %}" class="nav-link">
-                                <i class="bi bi-gear text-white"></i><span
-                                    class="ms-1 d-none d-sm-inline text-white">Settings</span>
                             </a>
                         </li>
                         <li>
