--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -1,20 +1,59 @@
-{% extends 'budget/base.html' %}
+{% load static %}
+<!doctype html>
+<html lang="en">
 
-{% block body %}
+<head>
 
-    <div>
-        <h1>Welcome to the HOMEPAGE!</h1>
-        <li>
-            {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}" class="nav-link">Logout</a>
-            {% else %}
-                <a href="{% url 'login' %}" class="nav-link">Login</a>
-            {% endif %}
-        </li>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Sintony&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="{% static 'budget/custom.css' %}">
+    <title>Easy Budget</title>
+    <link rel="icon" href="https://i.postimg.cc/GtHbQFyK/easy-budget-title-logo.png" type="image/icon type">
+</head>
+<style>
+    body {
+        background-color: #1a2f4b;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%231A2F4B'/%3E%3Cstop offset='1' stop-color='%2334495D'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%231D5452' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%231D5452' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+        background-attachment: fixed;
+        background-size: cover;
+    }
+</style>
+<header class="d-flex flex-wrap justify-content-center py-3 mb-4 bg-dark bg-opacity-25">
+    <div class="d-flex align-items-center ms-1 mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+        <img src="https://i.postimg.cc/MHXkyzQj/easy-budget-logo.png" alt="" class="bi me-2" width="195" height="32">
     </div>
 
-{% endblock %}
+    <ul class="nav nav-pills">
+        <li class="nav-item"><a href="{% url 'register' %}" class="nav-link nav-hover fs-6 text-white">Sign Up</a></li>
+        <li class="nav-item"><a href="{% url 'login' %}" class="nav-link nav-hover fs-6 text-white">Login</a></li>
+    </ul>
+</header>
+<div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 pb-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+            <img src="https://i.postimg.cc/d3mgGDW6/phone-mockup.png" class="d-block mx-lg-auto img-fluid"
+                alt="Dashboard and Transactions page on mobile phone" width="700" height="500" loading="eager">
+        </div>
+        <div class="col-lg-6">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Easy Budget</h1>
+            <p>If you are looking for a simple and easy to use budget app, look no further than
+                Easy Budget. This app is perfect for those who want to take control of their finances and get their
+                spending under control. Easy Budget lets you track your income and expenses so you can see where your
+                money is going and make adjustments to your budget accordingly. Get started today and take control of
+                your finances!</p>
+            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <button type="button" class="btn btn-home btn-lg px-4 me-md-2 text-white">Join Today!</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-
-
-
+</html>
