--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -12,7 +12,7 @@
                 <div class="col-md-12">
                     <div class="card text-white bg-dark h-100 bg-opacity-25">
                         <div class="card-body">
-                            <img class="profile-pic" src="{{ user.profile.image.url }}">
+                            <img class="profile-pic" src="https://i.postimg.cc/pLMGvKB6/user.png">
                             <p>username: {{ user.username }}</p>
                             <p>first name: {{ user.first_name }}</p>
                             <p>last name: {{ user.last_name }}</p>
