--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -2,13 +2,13 @@
 
 {% block body %}
 
-    <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 pb-5">
-            <div class="col-10 col-sm-8 col-lg-6">
-                <img src="https://i.postimg.cc/d3mgGDW6/phone-mockup.png" class="d-block mx-lg-auto img-fluid"
-                     alt="Dashboard and Transactions page on mobile phone" width="700" height="500" loading="eager">
+    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-lg-5 py-5">
+            <div class="col-md-10 mx-auto col-lg-5">
+                <img src="https://i.postimg.cc/bNCfJcbG/phone-mockup2.png"
+                     alt="Dashboard and Transactions page on mobile phone" class="img-fluid">
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-7 text-center text-lg-start">
                 <h1 class="display-5 fw-bold lh-1 mb-3">Easy Budget</h1>
                 <p>If you are looking for a simple and easy to use budget app, look no further than
                     Easy Budget. This app is perfect for those who want to take control of their finances and get their
@@ -17,10 +17,11 @@
                     money is going and make adjustments to your budget accordingly. Get started today and take control
                     of
                     your finances!</p>
-                <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                <div class="d-grid gap-2 d-md-flex justify-content-md-start pb-2">
                     <a href="{% url 'register' %}" class="btn btn-home btn-lg px-4 me-md-2 text-white">Join Today!</a>
                 </div>
             </div>
+
         </div>
     </div>
 
