--- a/budget/templates/budget/base.html
+++ b/budget/templates/budget/base.html
@@ -14,6 +14,11 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <!--chart js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous" />
+    <!--jQuery-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="{% static 'budget/custom.css' %}">
     <title>Easy Budget</title>
     <link rel="icon" href="https://i.postimg.cc/GtHbQFyK/easy-budget-title-logo.png" type="image/icon type">
@@ -29,6 +34,9 @@
         }
     </style>
 
+    {%block scripts%}
+    {%endblock scripts%}
+    
     <div class="container-fluid">
         <div class="row flex-nowrap">
             <div
