--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -12,13 +12,87 @@
             <div class="col-md-6">
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
-                        <p class="card-text text-center">Chart Here</p>
+                        <canvas id="myChart1"></canvas>
+                        {%block scripts%}
+                        <script>
+                        $(document).ready(function(){
+                            var ctx = document.getElementById('myChart1').getContext('2d');
+                            var myCategory = new Chart(ctx, {
+                                type: 'doughnut',
+                                data: {
+                                    labels: [{% for category in categories_list %}'{{category.name}}',{%endfor%}] //loop through queryset, 
+                                    datasets: [{
+                                        label: '# of users',
+                                        data: [{%for category in categories_list%}1,{%endfor%}],
+                                        backgroundColor: [
+                                            'rgba(255, 99, 132, 0.2)', 
+                                            'rgba(54, 162, 235, 0.2)',
+                                            'rgba(255, 206, 86, 0.2)',
+                                            'rgba(75, 192, 192, 0.2)',
+                                            'rgba(153, 102, 255, 0.2)',
+                                            'rgba(255, 159, 64, 0.2)'
+                                        ],
+                                        borderColor: [
+                                            'rgba(255, 99, 132, 1)',
+                                            'rgba(54, 162, 235, 1)',
+                                            'rgba(255, 206, 86, 1)',
+                                            'rgba(75, 192, 192, 1)',
+                                            'rgba(153, 102, 255, 1)',
+                                            'rgba(255, 159, 64, 1)'
+                                        ],
+                                        borderWidth: 1
+                                    }]
+                                },
+                                options: {
+                                    scales: {
+                                        y: {
+                                            beginAtZero: true
+                                        }
+                                    }
+                                }
+                    });
+                        });
+                    </script>
+                    {%endblock scripts%}
                     </div>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
+                        <div>
+                            {% for category in categories_list %}
+                            <p>{{ category.name }}</p>
+                            {%endfor%}
+
+
+                            <canvas id="myChart"></canvas>
+                          </div>
+                          
+                          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+                          
+                          <script>
+                            const ctx = document.getElementById('myChart');
+                          
+                            new Chart(ctx, {
+                              type: 'bar',
+                              data: {
+                                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                                datasets: [{
+                                  label: '# of Votes',
+                                  data: [12, 19, 3, 5, 2, 3],
+                                  borderWidth: 1
+                                }]
+                              },
+                              options: {
+                                scales: {
+                                  y: {
+                                    beginAtZero: true
+                                  }
+                                }
+                              }
+                            });
+                          </script>
                         <p class="card-text text-center">Chart Here</p>
                     </div>
                 </div>
