Feature cards added

--- a/budget/templates/budget/index.html
+++ b/budget/templates/budget/index.html
@@ -21,7 +21,41 @@
                     <a href="{% url 'register' %}" class="btn btn-home btn-lg px-4 me-md-2 text-white">Join Today!</a>
                 </div>
             </div>
-
+        </div>
+        <div class="row my-2">
+            <h2 class="text-center">Features</h2>
+        </div>
+        <div class="row mt-2">
+            <div class="col-md-4">
+                <div class="card bg-dark bg-opacity-25">
+                    <img src="https://i.postimg.cc/BZjwjbgK/dashboard.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title fs-4">Dashboard</h3>
+                        <p class="card-text">A dashboard that allows you to track your
+                            income and expenses in one place.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark bg-opacity-25">
+                    <img src="https://i.postimg.cc/52q5RWxg/budget-management.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title fs-4">Budget Management</h3>
+                        <p class="card-text">Track your income and expenses,
+                            and make adjustments to save money.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card bg-dark bg-opacity-25">
+                    <img src="https://i.postimg.cc/50Pp9JvS/reports.png" class="card-img-top" alt="">
+                    <div class="card-body">
+                        <h3 class="card-title fs-4">Reports</h3>
+                        <p class="card-text">Reports that compile all income and expenses from one budget to another in one
+                            place.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
