--- a/budget/templates/budget/dashboard.html
+++ b/budget/templates/budget/dashboard.html
@@ -2,6 +2,7 @@
 
 {% block body %}
 {{ category_names|json_script:"category_names"}}
+{{ category_types|json_script:"category_types"}}
 <div class="col py-3">
     <div class="container-fluid">
         <div class="row">
@@ -62,11 +63,6 @@
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
                         <div>
-                            {% for category in categories_list %}
-                            <p>{{ category.name }}</p>
-                            {%endfor%}
-
-
                             <canvas id="myChart"></canvas>
                           </div>
                           
@@ -103,7 +99,48 @@
             <div class="col-md-6">
                 <div class="card text-white bg-dark h-100 bg-opacity-25">
                     <div class="card-body">
-                        <p class="card-text text-center">Chart Here</p>
+                        <canvas id="myChart2"></canvas>
+                        <script type="text/javascript">
+                        var categoryTypes = JSON.parse(document.getElementById('category_types').textContent)
+                        console.log(categoryTypes)
+                        $(document).ready(function(){
+                            var ctx = document.getElementById('myChart2').getContext('2d');
+                            var myCategory = new Chart(ctx, {
+                                type: 'doughnut',
+                                data: {
+                                    labels: categoryTypes,
+                                    datasets: [{
+                                        label: '# of users',
+                                        data: categoryTypes.map(category => 1),
+                                        backgroundColor: [
+                                            'rgba(255, 99, 132, 0.2)', 
+                                            'rgba(54, 162, 235, 0.2)',
+                                            'rgba(255, 206, 86, 0.2)',
+                                            'rgba(75, 192, 192, 0.2)',
+                                            'rgba(153, 102, 255, 0.2)',
+                                            'rgba(255, 159, 64, 0.2)'
+                                        ],
+                                        borderColor: [
+                                            'rgba(255, 99, 132, 1)',
+                                            'rgba(54, 162, 235, 1)',
+                                            'rgba(255, 206, 86, 1)',
+                                            'rgba(75, 192, 192, 1)',
+                                            'rgba(153, 102, 255, 1)',
+                                            'rgba(255, 159, 64, 1)'
+                                        ],
+                                        borderWidth: 1
+                                    }]
+                                },
+                                options: {
+                                    scales: {
+                                        y: {
+                                            beginAtZero: true
+                                        }
+                                    }
+                                }
+                    });
+                        });
+                    </script>
                     </div>
                 </div>
             </div>
